3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

This checkin for the most part removes support for xpm and xbm graphics - 
    now the only image supported is the png.
common/arch.c: comment out printing on warning of object having no type -
    getting 300 meaningless messages at startup is annoying.
common/image.c: Remove X11 color information from colorname array.  Remove
    processing of color_fg and color_bg information from face file - only
    use color_fg if no magicmap information is available - foreground
    and background infoformation was only needed for bitmap graphics.
common/loader.c, loader.l: Add elevation element, comment out some logging
    messages that are excessive and only really relevant for people 
    who want to fix them (really should be in the collect script
    anyways).  Remove some unused code.
common/map.c: add outdoor field to map structure - add support for loading
    and saving it.
crossedit/App.c,crossedit/CrUtil.c, crossedit/Defines.h, crossedit/crossedit.c
    crossedit/xutil.c: Remove support for non png graphics.
crossedit/Attr.c: Add support for elevation variable, remove code for non
    png graphics.
doc/map-technical: Add note about outdoor field.
include/face.h: remove fg, bg fields from face struecture.
include/global.h: Update colorname array definition.
include/loader.h: Add V_ELEVATION field.
include/map.h: Add outdoor field to map structure.
include/newserver.h: Update types so it only loads/knows about png information.
include/object.h: Add elevation field to object structure.
lib/Makefile.in: Remove support for building crossfire.xpm and crossfire.xbm
    files.